--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "npm run build && mv public/index.html public/200.html && surge public --domain biswa.surge.sh",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
