Removed console logs

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "deploy": "npm run build && mv public/index.html public/200.html && surge public --domain biswa.surge.sh",
-    "deploy-prod": "npm run build && firebase deploy",
+    "deploy:prod": "npm run build && firebase deploy",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
